--- a/tutorial/tutorial.tex
+++ b/tutorial/tutorial.tex
@@ -133,12 +133,12 @@ module main {
   }
 
   // Part 2: System specification.
-  property a_le_b: a <= b;
+  invariant a_le_b: a <= b;
 
   // Part 3: Proof script.
   control {
     unroll (3);
-    decide;
+    check;
     print_results;
   }
 }
@@ -163,14 +163,14 @@ The \keywordbf{next} block appears after this and it defines the transition rela
 \subsubsection{The System Specification}
 The specification answers the question: \emph{what is the system supposed to do?}. 
 
-In our example, we have a single \keywordbf{property} that comprises that entire specification. Line 12 defines this \keyword{property}. It is named \ident{a\_le\_b} and as the name suggests, it states that \ident{a} must be less than or equal to \ident{b} for every reachable state of the system.
+In our example, we have a single \keywordbf{invariant} that comprises that entire specification. Line 12 defines this \keyword{invariant}. It is named \ident{a\_le\_b} and as the name suggests, it states that \ident{a} must be less than or equal to \ident{b} for every reachable state of the system.
 
 \subsubsection{The Proof Script}
 The third and final part of the \uclid{} module is a set of commands to the \uclid{} verification engine. These tell how we should go about proving\footnote{Note we are using a very broad definition of the word prove here to refer to any systematic method that gives us assurance that the specification is (perhaps partially) satisfied.} that the system satisfies itself specification.
 
-The proof script is contained within the \keywordbf{control} block. The commands here execute the system for 3 steps and check whether all of the systems properties (in this case, we only have one property: \ident{a\_le\_b}) are satisfied for each of these steps. 
+The proof script is contained within the \keywordbf{control} block. The commands here execute the system for 3 steps and check whether all of the systems properties (in this case, we only have one invariant: \ident{a\_le\_b}) are satisfied for each of these steps. 
 
-The command \proofcmd{unroll} executes the system for 3 steps. This execution generates four \emph{proof obligations}. These proof obligations ask whether the system satisfies the property \ident{a\_le\_b} in the initial state and in each of the 3 states reached next. The \proofcmd{decide} command \emph{checks} whether these proof obligations are satisfied and the \proofcmd{print\_results} prints out the results of these checks.
+The command \proofcmd{unroll} executes the system for 3 steps. This execution generates four \emph{proof obligations}. These proof obligations ask whether the system satisfies the invariant \ident{a\_le\_b} in the initial state and in each of the 3 states reached next. The \proofcmd{decide} command \emph{checks} whether these proof obligations are satisfied and the \proofcmd{print\_results} prints out the results of these checks.
 
 \subsection{Installing and Running \uclid{}}
 
