--- a/tutorial/ch-grammar.tex
+++ b/tutorial/ch-grammar.tex
@@ -1,438 +1,25 @@
 \chapter{Appendix: \uclid{} Grammar}
 
-\setlength{\grammarparsep}{20pt plus 1pt minus 1pt} % increase separation between rules
-\setlength{\grammarindent}{12em} % increase separation between LHS/RHS
+\newcommand{\paratitle}[1]{\textsf{\textbf{#1}}}
+\newcommand{\nonterminal}[1]{$\langle \textit{#1} \rangle$}
 
+This appendix describes \uclid{}'s grammar.
+
+\section{Grammar of Modules and Declarations}
+\paratitle{A model} consist of a list of modules. Each module consists of a list of declarations followed by an optional control block.
 \begin{grammar}
+     <Model> ::= <Module>*
 
+     <Module> ::= \keywordbf{module} <Id>~~ `{' <Decl>* <ControlBlock>? `}'
+\end{grammar}
 
-%%     lazy val OpAnd = "&&"
-%%     lazy val OpOr = "||"
-%%     lazy val OpBvAnd = "&"
-%%     lazy val OpBvOr = "|"
-%%     lazy val OpBvXor = "^"
-%%     lazy val OpBvNot = "~"
-%%     lazy val OpAdd = "+"
-%%     lazy val OpSub = "-"
-%%     lazy val OpMul = "*"
-%%     lazy val OpUMul = "*_u"
-%%     lazy val OpBiImpl = "<==>"
-%%     lazy val OpImpl = "==>"
-%%     lazy val OpLT = "<"
-%%     lazy val OpULT = "<_u"
-%%     lazy val OpGT = ">"
-%%     lazy val OpUGT = ">_u"
-%%     lazy val OpLE = "<="
-%%     lazy val OpULE = "<=_u"
-%%     lazy val OpGE = ">="
-%%     lazy val OpUGE = ">=_u"
-%%     lazy val OpEQ = "=="
-%%     lazy val OpNE = "!="
-%%     lazy val OpConcat = "++"
-%%     lazy val OpNeg = "-"
-%%     lazy val OpNot = "!"
-%%     lazy val OpMinus = "-"
-%%     lazy val OpSelectFromInstance = "->"
-%%     lazy val KwProcedure = "procedure"
-%%     lazy val KwBool = "bool"
-%%     lazy val KwInt = "int"
-%%     lazy val KwEnum = "enum"
-%%     lazy val KwRecord = "record"
-%%     lazy val KwReturns = "returns"
-%%     lazy val KwAssume = "assume"
-%%     lazy val KwAssert = "assert"
-%%     lazy val KwHavoc = "havoc"
-%%     lazy val KwVar = "var"
-%%     lazy val KwSharedVar = "sharedvar"
-%%     lazy val KwConst = "const"
-%%     lazy val KwSkip = "skip"
-%%     lazy val KwCall = "call"
-%%     lazy val KwIf = "if"
-%%     lazy val KwElse = "else"
-%%     lazy val KwCase = "case"
-%%     lazy val KwEsac = "esac"
-%%     lazy val KwFor = "for"
-%%     lazy val KwIn = "in"
-%%     lazy val KwRange = "range"
-%%     lazy val KwInstance = "instance"
-%%     lazy val KwType = "type"
-%%     lazy val KwInput = "input"
-%%     lazy val KwOutput = "output"
-%%     lazy val KwInit = "init"
-%%     lazy val KwNext = "next"
-%%     lazy val KwModule = "module"
-%%     lazy val KwITE = "ITE"
-%%     lazy val KwLambda = "Lambda"
-%%     lazy val KwFunction = "function"
-%%     lazy val KwControl = "control"
-%%     lazy val KwForall = "forall"
-%%     lazy val KwExists = "exists"
-%%     lazy val KwDefault = "default"
-%%     lazy val KwSynthesis = "synthesis"
-%%     lazy val KwGrammar = "grammar"
-%%     lazy val KwRequires = "requires"
-%%     lazy val KwEnsures = "ensures"
-%%     lazy val KwInvariant = "invariant"
-%%     lazy val KwDefineProp = "property"
-%%     lazy val KwDefineAxiom = "axiom"
-%%     lazy val KwModifies = "modifies"
-%% 
-%%     // lazy val TemporalOpGlobally = "G"
-%%     // lazy val TemporalOpFinally = "F"
-%%     // lazy val TemporalOpNext = "Next"
-%%     // lazy val TemporalOpUntil = "U"
-%%     // lazy val TemporalOpWUntil = "W"
-%%     // lazy val TemporalOpRelease = "R"
-%% 
-%%     lexical.delimiters ++= List("(", ")", ",", "[", "]",
-%%       "bv", "{", "}", ";", "=", ":", "::", ".", "->", "*",
-%%       OpAnd, OpOr, OpBvAnd, OpBvOr, OpBvXor, OpBvNot, OpAdd, OpSub, OpMul,
-%%       OpBiImpl, OpImpl, OpLT, OpGT, OpLE, OpGE, OpEQ, OpNE, OpConcat,
-%%       OpNot, OpMinus, OpSelectFromInstance)
-%%     lexical.reserved += (OpAnd, OpOr, OpAdd, OpSub, OpMul,
-%%       OpBiImpl, OpImpl, OpLT, OpGT, OpLE, OpGE, OpEQ, OpNE,
-%%       OpBvAnd, OpBvOr, OpBvXor, OpBvNot, OpConcat, OpNot, OpMinus,
-%%       "false", "true", "bv", KwProcedure, KwBool, KwInt, KwReturns,
-%%       KwAssume, KwAssert, KwSharedVar, KwVar, KwHavoc, KwCall, KwIf, KwElse,
-%%       KwCase, KwEsac, KwFor, KwIn, KwRange, KwInstance, KwInput, KwOutput,
-%%       KwConst, KwModule, KwType, KwEnum, KwRecord, KwSkip,
-%%       KwFunction, KwControl, KwInit, KwNext, KwITE, KwLambda, KwModifies,
-%%       KwDefineProp, KwDefineAxiom, KwForall, KwExists, KwDefault,
-%%       KwSynthesis, KwGrammar, KwRequires, KwEnsures, KwInvariant)
-%%       // TemporalOpGlobally, TemporalOpFinally, TemporalOpNext,
-%%       // TemporalOpUntil, TemporalOpWUntil, TemporalOpRelease)
-%% 
-%%     lazy val ast_binary: Expr ~ String ~ Expr => Expr = {
-%%       // case x ~ TemporalOpUntil   ~ y => OperatorApplication(UntilTemporalOp(), List(x, y))
-%%       // case x ~ TemporalOpWUntil  ~ y => OperatorApplication(WUntilTemporalOp(), List(x, y))
-%%       // case x ~ TemporalOpRelease ~ y => OperatorApplication(ReleaseTemporalOp(), List(x, y))
-%%       case x ~ OpBiImpl ~ y => OperatorApplication(IffOp(), List(x, y))
-%%       case x ~ OpImpl ~ y => OperatorApplication(ImplicationOp(), List(x, y))
-%%       case x ~ OpAnd ~ y => OperatorApplication(ConjunctionOp(), List(x, y))
-%%       case x ~ OpOr ~ y => OperatorApplication(DisjunctionOp(), List(x, y))
-%%       case x ~ OpBvAnd ~ y => OperatorApplication(BVAndOp(0), List(x, y))
-%%       case x ~ OpBvOr ~ y => OperatorApplication(BVOrOp(0), List(x, y))
-%%       case x ~ OpBvXor ~ y => OperatorApplication(BVXorOp(0), List(x, y))
-%%       case x ~ OpLT ~ y => OperatorApplication(LTOp(), List(x,y))
-%%       case x ~ OpGT ~ y => OperatorApplication(GTOp(), List(x,y))
-%%       case x ~ OpLE ~ y => OperatorApplication(LEOp(), List(x,y))
-%%       case x ~ OpGE ~ y => OperatorApplication(GEOp(), List(x,y))
-%%       case x ~ OpEQ ~ y => OperatorApplication(EqualityOp(), List(x, y))
-%%       case x ~ OpNE ~ y => OperatorApplication(InequalityOp(), List(x, y))
-%%       case x ~ OpConcat ~ y => OperatorApplication(ConcatOp(), List(x,y))
-%%       case x ~ OpAdd ~ y => OperatorApplication(AddOp(), List(x,y))
-%%       case x ~ OpSub ~ y => OperatorApplication(SubOp(), List(x,y))
-%%       case x ~ OpMul ~ y => OperatorApplication(MulOp(), List(x,y))
-%%     }
-%% 
-%%     lazy val RelOp: Parser[String] = OpGT | OpLT | OpEQ | OpNE | OpGE | OpLE
-%%     lazy val UnOp: Parser[String] = OpNot | OpMinus
-%%     lazy val RecordSelectOp: Parser[Identifier] = positioned { ("." ~> Id) }
-%%     lazy val SelectFromInstanceOp : Parser[Identifier] = positioned { (OpSelectFromInstance ~> Id) }
-%%     lazy val SelectFromModuleOp : Parser[(Identifier, Identifier)] = {
-%%       Id ~ ("::" ~> Id) ^^ { case modId ~ id => (modId, id) }
-%%     }
-%%     lazy val ArraySelectOp: Parser[List[Expr]] =
-%%       ("[" ~> Expr ~ rep("," ~> Expr) <~ "]") ^^
-%%       {case e ~ es => (e :: es) }
-%%     lazy val ArrayStoreOp: Parser[(List[Expr],Expr)] =
-%%       ("[" ~> (Expr ~ rep("," ~> Expr) ~ ("=" ~> Expr)) <~ "]") ^^
-%%       {case e ~ es ~ r => (e :: es, r)}
-%%     lazy val ConstBitVectorSlice: Parser[lang.ConstBitVectorSlice] =
-%%       positioned { ("[" ~> Integer ~ ":" ~ Integer <~ "]") ^^ { case x ~ ":" ~ y => lang.ConstBitVectorSlice(x.value.toInt, y.value.toInt) } }
-%%     lazy val VarBitVectorSlice: Parser[lang.VarBitVectorSlice] =
-%%       positioned { ("[" ~> Expr ~ ":" ~ Expr <~ "]") ^^ { case x ~ ":" ~ y => lang.VarBitVectorSlice(x, y) } }
-%%     lazy val ConstExtractOp : Parser[lang.ConstExtractOp] =
-%%       ("[" ~> Integer ~ ":" ~ Integer <~ "]") ^^ { case x ~ ":" ~ y => lang.ConstExtractOp(lang.ConstBitVectorSlice(x.value.toInt, y.value.toInt)) }
-%%     lazy val VarExtractOp : Parser[lang.VarExtractOp] =
-%%       positioned { ("[" ~> Expr ~ ":" ~ Expr <~ "]") ^^ { case x ~ ":" ~ y => lang.VarExtractOp(lang.VarBitVectorSlice(x, y)) } }
-%%     lazy val ExtractOp : Parser[lang.ExtractOp] = positioned { ConstExtractOp | VarExtractOp }
-%%     lazy val Id: PackratParser[Identifier] = positioned { ident ^^ {case i => Identifier(i)} }
-%%     lazy val Bool: PackratParser[BoolLit] =
-%%       positioned { "false" ^^ { _ => BoolLit(false) } | "true" ^^ { _ => BoolLit(true) } }
-%%     lazy val Integer: PackratParser[lang.IntLit] =
-%%       positioned { integerLit ^^ { case intLit => IntLit(BigInt(intLit.chars, intLit.base)) } }
-%%     lazy val BitVector: PackratParser[lang.BitVectorLit] =
-%%       positioned { bitvectorLit ^^ { case bvLit => lang.BitVectorLit(bvLit.intValue, bvLit.width) } }
-%%     lazy val Number : PackratParser[lang.NumericLit] = positioned (Integer | BitVector)
-%%     lazy val E1: PackratParser[Expr] =
-%%       "(" ~ KwForall ~> IdTypeList ~ ("::" ~> E1) <~ ")" ^^ { case ids ~ expr => OperatorApplication(ForallOp(ids), List(expr)) } |
-%%       "(" ~ KwExists ~> IdTypeList ~ ("::" ~> E1) <~ ")" ^^ { case ids ~ expr => OperatorApplication(ExistsOp(ids), List(expr)) } |
-%%       E2
-%% 
-%%     /** E2 = E3 OpEquiv E2 | E3  **/
-%%     lazy val E2: PackratParser[Expr] = positioned { E3 ~ OpBiImpl ~ E2 ^^ ast_binary | E3 }
-%%     /** E3 = E4 OpImpl E3 | E4  **/
-%%     lazy val E3: PackratParser[Expr] = positioned { E4 ~ OpImpl ~ E3 ^^ ast_binary | E4 }
-%%     /** E4 = E5 OpAnd E4 | E5 OpOr E4 | E5 **/
-%%     lazy val E4: PackratParser[Expr] = positioned {
-%%         E5 ~ OpAnd ~ E4 ^^ ast_binary   |
-%%         E5 ~ OpOr ~ E4 ^^ ast_binary    |
-%%         E5 ~ OpBvAnd ~ E4 ^^ ast_binary |
-%%         E5 ~ OpBvOr ~ E4 ^^ ast_binary  |
-%%         E5 ~ OpBvXor ~ E4 ^^ ast_binary |
-%%         E5
-%%     }
-%%     /** E5 = E6 OpRel E5 | E6  **/
-%%     lazy val E5: PackratParser[Expr] = positioned ( E6 ~ RelOp ~ E6 ^^ ast_binary | E6 )
-%%     /** E6 = E7 OpConcat E6 | E7 **/
-%%     lazy val E6: PackratParser[Expr] = positioned ( E7 ~ OpConcat ~ E6 ^^ ast_binary | E7 )
-%%     /** E7 = E8 OpAdd E7 | E8 **/
-%%     lazy val E7: PackratParser[Expr] = positioned ( E8 ~ OpAdd ~ E7 ^^ ast_binary | E8 )
-%%     /** E8 = E8 OpSub E8 | E9 **/
-%%     lazy val E8: PackratParser[Expr] = positioned ( E9 ~ OpSub ~ E9 ^^ ast_binary | E9 )
-%%     /** E9 = E9 OpMul E8 | E9 **/
-%%     lazy val E9: PackratParser[Expr] = E10 ~ OpMul ~ E10 ^^ ast_binary | E10
-%%     /** E10 = UnOp E11 | E11 **/
-%%     lazy val E10: PackratParser[Expr] = positioned {
-%%         OpNeg ~> E11 ^^ { case e => OperatorApplication(UnaryMinusOp(), List(e)) } |
-%%         OpNot ~> E11 ^^ { case e => OperatorApplication(NegationOp(), List(e)) } |
-%%         OpBvNot ~> E11 ^^ { case e => OperatorApplication(BVNotOp(0), List(e)) } |
-%%         E11
-%%     }
-%%     /** E11 = E12 MapOp | E12 **/
-%%     lazy val E11: PackratParser[Expr] = positioned {
-%%         E12 ~ ArraySelectOp ^^ { case e ~ m => ArraySelectOperation(e, m) } |
-%%         E12 ~ ArrayStoreOp ^^ { case e ~ m => ArrayStoreOperation(e, m._1, m._2) } |
-%%         E12 ~ ExtractOp ^^ { case e ~ m => OperatorApplication(m, List(e)) } |
-%%         E12
-%%     }
-%%     lazy val E12: PackratParser[Expr] = positioned {
-%%         E13 ~ ExprList ^^ { case e ~ f => FuncApplication(e, f) } |
-%%         E13 ~ RecordSelectOp ~ rep(RecordSelectOp) ^^ {
-%%           case e ~ r ~ rs =>
-%%             (r :: rs).foldLeft(e){
-%%               (acc, f) => OperatorApplication(RecordSelect(f), List(acc))
-%%             }
-%%         } |
-%%         E13 ~ SelectFromInstanceOp ~ rep(SelectFromInstanceOp) ^^ {
-%%           case e ~ f ~ fs =>
-%%             (f :: fs).foldLeft(e) {
-%%               (acc, f) => OperatorApplication(SelectFromInstance(f), List(acc))
-%%             }
-%%         } |
-%%         E13
-%%     }
-%%     /** E12 = false | true | Number | Id FuncApplication | (Expr) **/
-%%     lazy val E13: PackratParser[Expr] = positioned {
-%%         Bool |
-%%         Number |
-%%         "{" ~> Expr ~ rep("," ~> Expr) <~ "}" ^^ {case e ~ es => Tuple(e::es)} |
-%%         KwITE ~> ("(" ~> Expr ~ ("," ~> Expr) ~ ("," ~> Expr) <~ ")") ^^ { case e ~ t ~ f => ITE(e,t,f) } |
-%%         KwLambda ~> (IdTypeList) ~ ("." ~> Expr) ^^ { case idtyps ~ expr => Lambda(idtyps, expr) } |
-%%         "(" ~> Expr <~ ")" |
-%%         SelectFromModuleOp  ^^ {
-%%           case (moduleId, varId) => lang.ExternalIdentifier(moduleId, varId)
-%%         } |
-%%         Id
-%%     }
-%% 
-%%     /** Expr = E1 (Used to be TemporalExpr0) **/
-%%     lazy val Expr: PackratParser[Expr] = positioned ( E1 ) // Used to be TemporalExpr0
-%%     lazy val ExprList: Parser[List[Expr]] =
-%%       ("(" ~> Expr ~ rep("," ~> Expr) <~ ")") ^^ { case e ~ es => e::es } |
-%%       "(" ~> ")" ^^ { case _ => List.empty[Expr] }
-%% 
-%%     /** Examples of allowed types are bool | int | [int,int,bool] int **/
-%%     lazy val PrimitiveType : PackratParser[Type] = positioned {
-%%       KwBool ^^ {case _ => BoolType()}   |
-%%       KwInt ^^ {case _ => IntType()}     |
-%%       bitVectorType ^^ {case bvType => BitVectorType(bvType.width)}
-%%     }
-%% 
-%%     lazy val EnumType : PackratParser[lang.EnumType] = positioned {
-%%       KwEnum ~> ("{" ~> Id) ~ rep("," ~> Id) <~ "}" ^^ { case id ~ ids => lang.EnumType(id::ids) }
-%%     }
-%%     lazy val TupleType : PackratParser[lang.TupleType] = positioned {
-%%       ("{" ~> Type ~ rep("," ~> Type) <~ "}") ^^ { case t ~ ts => lang.TupleType(t :: ts) }
-%%     }
-%%     lazy val RecordType : PackratParser[lang.RecordType] = positioned {
-%%       KwRecord ~> ("{" ~> IdType) ~ rep("," ~> IdType) <~ "}" ^^ { case id ~ ids => lang.RecordType(id::ids) }
-%%     }
-%%     lazy val MapType : PackratParser[lang.MapType] = positioned {
-%%       PrimitiveType ~ rep ("*" ~> PrimitiveType) ~ ("->" ~> Type) ^^ { case t ~ ts ~ rt => lang.MapType(t :: ts, rt)}
-%%     }
-%%     lazy val ArrayType : PackratParser[lang.ArrayType] = positioned {
-%%       ("[") ~> Type ~ (rep ("," ~> PrimitiveType) <~ "]") ~ Type ^^ { case t ~ ts ~ rt => lang.ArrayType(t :: ts, rt)}
-%%     }
-%%     lazy val SynonymType : PackratParser[lang.SynonymType] = positioned ( Id ^^ { case id => lang.SynonymType(id) } )
-%%     lazy val ExternalType : PackratParser[lang.ExternalType] = positioned {
-%%       Id ~ ("::" ~> Id) ^^ { case moduleId ~ typeId => lang.ExternalType(moduleId, typeId) }
-%%     }
-%%     lazy val Type : PackratParser[Type] = positioned {
-%%       MapType | ArrayType | EnumType | TupleType | RecordType | ExternalType | SynonymType | PrimitiveType
-%%     }
-%% 
-%%     lazy val IdType : PackratParser[(Identifier,Type)] =
-%%       Id ~ (":" ~> Type) ^^ { case id ~ typ => (id,typ)}
-%% 
-%%     lazy val IdTypeList : PackratParser[List[(Identifier,Type)]] =
-%%       "(" ~> IdType ~ (rep ("," ~> IdType) <~ ")") ^^ { case t ~ ts =>  t :: ts} |
-%%       "(" ~ ")" ^^ { case _~_ => List.empty[(Identifier,Type)] }
-%% 
-%%     lazy val Lhs : PackratParser[lang.Lhs] = positioned {
-%%       Id ~ VarBitVectorSlice ^^ { case id ~ slice => lang.LhsVarSliceSelect(id, slice) }  |
-%%       Id ~ ArraySelectOp ^^ { case id ~ mapOp => lang.LhsArraySelect(id, mapOp) }        |
-%%       Id ~ RecordSelectOp ~ rep(RecordSelectOp) ^^ { case id ~ rOp ~ rOps => lang.LhsRecordSelect(id, rOp::rOps) }    |
-%%       Id ^^ { case id => lang.LhsId(id) }
-%%     }
-%% 
-%%     lazy val LhsList: PackratParser[List[Lhs]] =
-%%       ("(" ~> Lhs ~ rep("," ~> Lhs) <~ ")") ^^ { case l ~ ls => l::ls } |
-%%       "(" ~> ")" ^^ { case _ => List.empty[Lhs] }
-%% 
-%%     lazy val RangeExpr: PackratParser[(NumericLit,NumericLit)] =
-%%       KwRange ~> ("(" ~> Number ~ ("," ~> Number) <~ ")") ^^ { case x ~ y => (x,y) }
-%% 
-%%     lazy val IdList : PackratParser[List[lang.Identifier]] =
-%%       Id ~ rep("," ~> Id) ^^ { case id ~ ids => id :: ids }
-%% 
-%%     lazy val LocalVarDecl : PackratParser[lang.LocalVarDecl] = positioned {
-%%       KwVar ~> IdType <~ ";" ^^ { case (id,typ) => lang.LocalVarDecl(id,typ)}
-%%     }
-%% 
-%%     lazy val Statement: PackratParser[Statement] = positioned {
-%%       KwSkip <~ ";" ^^ { case _ => SkipStmt() } |
-%%       KwAssert ~> Expr <~ ";" ^^ { case e => AssertStmt(e, None) } |
-%%       KwAssume ~> Expr <~ ";" ^^ { case e => AssumeStmt(e, None) } |
-%%       KwHavoc ~> Id <~ ";" ^^ { case id => HavocStmt(id) } |
-%%       Lhs ~ rep("," ~> Lhs) ~ "=" ~ Expr ~ rep("," ~> Expr) <~ ";" ^^
-%%         { case l ~ ls ~ "=" ~ r ~ rs => AssignStmt(l::ls, r::rs) } |
-%%       KwCall ~> LhsList ~ ("=" ~> Id) ~ ExprList <~ ";" ^^
-%%         { case lhss ~ id ~ args => ProcedureCallStmt(id, lhss, args) } |
-%%       KwNext ~ "(" ~> Id <~ ")" ~ ";" ^^
-%%         { case id => lang.ModuleCallStmt(id) } |
-%%       KwIf ~ "(" ~ "*" ~ ")" ~> (BlockStatement <~ KwElse) ~ BlockStatement ^^
-%%         { case tblk ~ fblk => lang.IfElseStmt(lang.FreshLit(lang.BoolType()), tblk, fblk) } |
-%%       KwIf ~ "(" ~ "*" ~ ")" ~> BlockStatement ^^
-%%         { case blk => IfElseStmt(lang.FreshLit(lang.BoolType()), blk, List.empty) } |
-%%       KwIf ~ "(" ~> (Expr <~ ")") ~ BlockStatement ~ (KwElse ~> BlockStatement) ^^
-%%         { case e ~ f ~ g => IfElseStmt(e,f,g)} |
-%%       KwIf ~> (Expr ~ BlockStatement) ^^
-%%         { case e ~ f => IfElseStmt(e, f, List.empty[Statement]) } |
-%%       KwCase ~> rep(CaseBlockStmt) <~ KwEsac ^^
-%%         { case i => CaseStmt(i) } |
-%%       KwFor ~> (Id ~ (KwIn ~> RangeExpr) ~ BlockStatement) ^^
-%%         { case id ~ r ~ body => ForStmt(Identifier(id.name), r, body) }
-%%     }
-%% 
-%%     lazy val CaseBlockStmt: PackratParser[(Expr, List[Statement])] =
-%%       (Expr ~ ":" ~ BlockStatement) ^^ { case e ~ ":" ~ ss => (e,ss) } |
-%%       (KwDefault ~ ":" ~> BlockStatement) ^^ { case ss => (BoolLit(true), ss) }
-%% 
-%%     lazy val BlockStatement: PackratParser[List[Statement]] =
-%%       "{" ~> rep (Statement) <~ "}"
-%% 
-%%     lazy val OptionalExpr : PackratParser[Option[lang.Expr]] =
-%%       "(" ~ ")" ^^ { case _ => None } |
-%%       "(" ~> Expr <~ ")" ^^ { case expr => Some(expr) }
-%%     lazy val ArgMap : PackratParser[(lang.Identifier, Option[lang.Expr])] =
-%%       Id ~ ":" ~ OptionalExpr ^^ { case id ~ ":" ~ optExpr => (id, optExpr) }
-%%     lazy val ArgMapList : PackratParser[List[(lang.Identifier, Option[lang.Expr])]] =
-%%       "(" ~ ")" ^^ { case _ => List.empty } |
-%%       "(" ~> ArgMap ~ rep("," ~> ArgMap) <~ ")" ^^ { case arg ~ args => arg :: args }
-%% 
-%%     lazy val InstanceDecl : PackratParser[lang.InstanceDecl] = positioned {
-%%       KwInstance ~> Id ~ ":" ~ Id ~ ArgMapList <~ ";" ^^ { case instId ~ ":" ~ moduleId ~ args => lang.InstanceDecl(instId, moduleId, args, None, None) }
-%%     }
-%% 
-%%     lazy val RequireExpr : PackratParser[lang.Expr] = positioned {
-%%       KwRequires ~> Expr <~ ";"
-%%     }
-%%     lazy val EnsureExpr : PackratParser[lang.Expr] = positioned {
-%%       KwEnsures ~> Expr <~ ";"
-%%     }
-%%     lazy val ModifiesExprs : PackratParser[List[lang.Identifier]] = {
-%%       KwModifies ~> Id ~ rep("," ~> Id) <~ ";" ^^ { case id ~ ids => id :: ids }
-%%     }
-%%     lazy val ProcedureDecl : PackratParser[lang.ProcedureDecl] = positioned {
-%%       KwProcedure ~> Id ~ IdTypeList ~ (KwReturns ~> IdTypeList) ~ 
-%%       rep(RequireExpr) ~ rep(EnsureExpr) ~ rep(ModifiesExprs) ~
-%%         ("{" ~> rep(LocalVarDecl)) ~ (rep(Statement) <~ "}") ^^
-%%         { case id ~ args ~ outs ~ requires ~ ensures ~ modifies ~ decls ~ body =>
-%%           lang.ProcedureDecl(id, lang.ProcedureSig(args,outs), decls, body, 
-%%                              requires, ensures, (modifies.flatMap(m => m)).toSet) } |
-%%       // procedure with no return value
-%%       KwProcedure ~> Id ~ IdTypeList ~ rep(RequireExpr) ~ rep(EnsureExpr) ~ rep(ModifiesExprs) ~ 
-%%       ("{" ~> rep(LocalVarDecl)) ~ (rep(Statement) <~ "}") ^^
-%%         { case id ~ args ~ requires ~ ensures ~ modifies ~ decls ~ body =>
-%%           lang.ProcedureDecl(id, lang.ProcedureSig(args, List.empty[(Identifier,Type)]), decls, body, 
-%%                              requires, ensures, (modifies.flatMap(m => m)).toSet) }
-%%     }
-%% 
-%%     lazy val TypeDecl : PackratParser[lang.TypeDecl] = positioned {
-%%       KwType ~> Id ~ ("=" ~> Type) <~ ";" ^^ { case id ~ t => lang.TypeDecl(id,t) } |
-%%       KwType ~> Id <~ ";" ^^ { case id => lang.TypeDecl(id, lang.UninterpretedType(id)) }
-%%     }
-%% 
-%%     lazy val VarsDecl : PackratParser[lang.StateVarsDecl] = positioned {
-%%       KwVar ~> IdList ~ ":" ~ Type <~ ";" ^^ { case ids ~ ":" ~ typ => lang.StateVarsDecl(ids, typ) }
-%%     }
-%%     lazy val InputsDecl : PackratParser[lang.InputVarsDecl] = positioned {
-%%       KwInput ~> IdList ~ ":" ~ Type <~ ";" ^^ { case ids ~ ":" ~ typ => lang.InputVarsDecl(ids, typ) }
-%%     }
-%%     lazy val OutputsDecl : PackratParser[lang.OutputVarsDecl] = positioned {
-%%       KwOutput ~> IdList ~ ":" ~ Type <~ ";" ^^ { case ids ~ ":" ~ typ => lang.OutputVarsDecl(ids, typ) }
-%%     }
-%%     lazy val SharedVarsDecl : PackratParser[lang.SharedVarsDecl] = positioned {
-%%       KwSharedVar ~> IdList ~ ":" ~ Type <~ ";" ^^ { case ids ~ ":" ~ typ => lang.SharedVarsDecl(ids, typ) }
-%%     }
-%% 
-%%     lazy val ConstDecl : PackratParser[lang.ConstantDecl] = positioned {
-%%       KwConst ~> IdType <~ ";" ^^ { case (id,typ) => lang.ConstantDecl(id,typ)}
-%%     }
-%% 
-%%     lazy val FuncDecl : PackratParser[lang.FunctionDecl] = positioned {
-%%       KwFunction ~> Id ~ IdTypeList ~ (":" ~> Type) <~ ";" ^^
-%%       { case id ~ idtyps ~ rt => lang.FunctionDecl(id, lang.FunctionSig(idtyps, rt)) }
-%%     }
-%% 
-%%     lazy val SynthFuncDecl : PackratParser[lang.SynthesisFunctionDecl] = positioned {
-%%       KwSynthesis ~ KwFunction ~> Id ~ IdTypeList ~ (":" ~> Type) <~ ";" ^^
-%%       { case id ~ idtyps ~ rt =>
-%%           lang.SynthesisFunctionDecl(id, lang.FunctionSig(idtyps, rt), List.empty, List.empty, None)
-%%       }
-%%     }
-%%     lazy val InitDecl : PackratParser[lang.InitDecl] = positioned {
-%%       KwInit ~> BlockStatement ^^
-%%         { case b => lang.InitDecl(b) }
-%%     }
-%% 
-%%     lazy val NextDecl : PackratParser[lang.NextDecl] = positioned {
-%%       KwNext ~> BlockStatement ^^
-%%         { case b => lang.NextDecl(b) }
-%%     }
-%% 
-%%     lazy val SpecDecl: PackratParser[lang.SpecDecl] = positioned {
-%%       (KwInvariant | KwDefineProp) ~> Id ~ (":" ~> Expr) <~ ";" ^^ { case id ~ expr => lang.SpecDecl(id,expr, List.empty) } |
-%%       (KwInvariant | KwDefineProp) ~> Id ~ ("[" ~> rep(Expr) <~ "]") ~  (":" ~> Expr) <~ ";" ^^
-%%          { case id ~ es ~ expr => lang.SpecDecl(id, expr, es.map(ExprDecorator.parse(_))) }
-%%     }
-%% 
-%%     lazy val AxiomDecl: PackratParser[lang.AxiomDecl] = positioned {
-%%       (KwAssume | KwDefineAxiom) ~> Id ~ (":" ~> Expr) <~ ";" ^^ { case id ~ expr => lang.AxiomDecl(Some(id), expr) } |
-%%       (KwAssume | KwDefineAxiom) ~> Expr <~ ";" ^^ { case expr => lang.AxiomDecl(None, expr) }
-%%     }
-%% 
-%%     lazy val Decl: PackratParser[Decl] =
-%%       positioned (InstanceDecl | TypeDecl | ConstDecl | FuncDecl | SynthFuncDecl |
-%%                   VarsDecl | InputsDecl | OutputsDecl | SharedVarsDecl |
-%%                   ConstDecl | ProcedureDecl | InitDecl | NextDecl | SpecDecl | AxiomDecl)
-%% 
-     <Model> ::= <ModuleList>
-
-     <ModuleList> ::= <Module> <ModuleList> \alt <Empty>
-
-     <Module> ::= `module' <Id>~~ `{' <DeclList> `}'
-              \alt `module' <Id>~~ `{' <DeclList> <ControlBlock> `}'
-
-     <DeclList> ::= <Decl> <DeclList> \alt <Empty>
-
+\paratitle{Declarations} can be of the following types.
+\begin{grammar}
      <Decl> ::= <TypeDecl> 
             \alt <InputsDecl> 
             \alt <OutputsDecl> 
             \alt <VarsDecl> 
-            \alt <ConstDecl> 
+            \alt <ConstsDecl> 
             \alt <SharedVarsDecl> 
             \alt <FuncDecl> 
             \alt <ProcedureDecl> 
@@ -441,22 +28,273 @@
             \alt <NextDecl> 
             \alt <AxiomDecl>
             \alt <SpecDecl> 
-
-     <ControlBlock> ::= `control'~~ `{' <CmdList> `}'
-
-     <CmdList> ::= <Cmd> <CmdList> \alt <Empty>
-
-     <Cmd> ::=
-       <CmdResult> <CmdArgObj>  <Id> `;'
-       \alt <CmdResult> <CmdArgObj>  <Id> <IdParamList> `;'
-       \alt <CmdResult> <CmdArgObj>  <Id> <ExprList> `;'
-       \alt <CmdResult> <CmdArgObj>  <Id> <IdParamList> <ExprList> `;' 
-
-     <CmdResult> ::=  <Id> `=' \alt <empty>
- 
-     <CmdArgObj> ::= <Id> `->' \alt <empty>
-
-     <IdParamList> ::= `[' <IdList> `]'
-
-     <IdList> ::= <Id> \alt <Id> `,' <IdList>
 \end{grammar}
+
+\paratitle{Type declarations} declare either a type synonym or an uninterpreted type.
+\begin{grammar}
+     <TypeDecl> ::= \keywordbf{type} <Id> `=' <Type> `;'
+              \alt \keywordbf{type} <Id> `;'
+
+\end{grammar}
+
+\paratitle{Variable declarations} can refer to inputs, outputs, state variables or shared variables.
+\begin{grammar}
+     <InputsDecl> ::=
+       \keywordbf{input} ~ <IdList> `:' <Type> `;'
+
+     <OutputsDecl> ::=
+       \keywordbf{output} ~ <IdList> `:' <Type> `;'
+
+     <VarsDecl> ::=
+       \keywordbf{var} ~ <IdList> `:' <Type> `;'
+
+     <ConstsDecl> ::=
+       \keywordbf{const} ~ <IdList> `:' <Type> `;'
+
+     <SharedVarsDecl> ::=
+       \keywordbf{sharedvar} ~ <IdList> `:' <Type> `;'
+
+\end{grammar}
+
+\paratitle{Function declarations} refer to uninterpreted functions. 
+\begin{grammar}
+     <FuncDecl> ::= 
+       \keywordbf{function} <Id> `(' <IdTypeList> `)' `:' <Type> `;'
+
+\end{grammar}
+
+\paratitle{Procedure declarations} consist of a formal parameter list, a list of return values and types, 
+followed by optional pre-/post-conditions and the list of state variables modified by procedure.
+\begin{grammar}
+     <ProcedureDecl> ::=
+       \keywordbf{procedure} <Id> `(' <IdTypeList> ')' <ProcReturnArg>? \\
+       <RequireExprs> <EnsureExprs> <ModifiesExprs> \\
+       `{' <VarsDecls>* <Statement>* `}'
+
+     <ProcReturnArg> ::= \keywordbf{returns} `(' <IdTypeList> `)'
+
+     <RequireExprs> ::= ( \keywordbf{requires} <Expr> `;' )*
+
+     <EnsureExprs> ::= ( \keywordbf{ensures} <Expr> `;' )*
+
+     <ModifiesExprs> ::= ( \keywordbf{modifies} <IdList> `;' )*
+
+\end{grammar}
+
+\paratitle{Instance declarations} allow the instantiation (duh!) of other modules. It consists of the instance name, the name of the module being instantiated and the list of mappings for the instances' inputs, output and shared variables. 
+\begin{grammar}
+     <InstanceDecl> ::= \keywordbf{instance} <Id> `:' <Id> <ArgMapList> `;'
+
+     <ArgMapList>   ::= `(' `)' 
+                    \alt `(' <ArgMap> `,' <ArgMap> `)'
+
+     <ArgMap> ::= <Id> `:' `(' `)' 
+              \alt <Id> `:' `(' <Expr> `)'
+             
+\end{grammar}
+
+\paratitle{Axioms} refer to assumptions while a \paratitle{specification declaration} can be a \keywordbf{property} or \keywordbf{invariant} of the design. Note \keywordbf{property} and \keywordbf{invariant} are synonyms.
+
+\begin{grammar}
+     <AxiomDecl> ::= \keywordbf{axiom} <Id> `:' <Expr> `;'
+                 \alt \keywordbf{axiom} <Expr> `;'
+
+     <SpecDecl> ::= <PropertyKW> <Id> `:' <Expr> `;'
+                 \alt <PropertyKW> <Expr> `;'
+
+     <PropertyKW> ::= \keywordbf{property} \alt \keywordbf{invariant}
+\end{grammar}
+
+\paratitle{Init} and \paratitle{next} blocks consist of lists of statements.
+\begin{grammar}
+     <InitDecl> ::= \keywordbf{init} `{' <Statement>* `}'
+
+     <NextDecl> ::= \keywordbf{next} `{' <Statement>* `}'
+
+\end{grammar}
+
+\section{Statement Grammar}
+\paratitle{Statements} are the following types, most of which should be familiar. Note the support for simultaneous assignment \`a la Python. The keyword \keywordbf{next} allows for synchronous scheduling of instantiated modules.
+\begin{grammar}
+     <Statement> 
+       ::= \keywordbf{skip} `;' 
+       \alt \keywordbf{assert} <Expr> `;'
+       \alt \keywordbf{assume} <Expr> `;'
+       \alt \keywordbf{havoc} <Id>  `;'
+       \alt <LhsList> `=' <ExprList> `;'
+       \alt \keywordbf{call} `(' <LhsList> `)' `=' <Id> <ExprList> `;'
+       \alt \keywordbf{next} `(' <Id> `)' `;'
+       \alt <IfStmt>
+       \alt <CaseStmt>
+       \alt <ForLoop>
+\end{grammar}
+
+\paratitle{Assignments} and \paratitle{call} statements refer to the nonterminal \nonterminal{LhsList}. As the name suggests, this is a list of syntactic forms that can appear on the left hand side of an assignment. \nonterminal{Lhs} are of four types: (i) identifiers, bitvector slices within identifiers, (iii) array indices, and (iv) fields within records.
+\begin{grammar}
+    <LhsList> ::= <Lhs> (`,' <Lhs>)*
+
+    <Lhs> ::= <Id>
+          \alt <Id> `[' <Expr> `:' <Expr> `]'
+          \alt <Id> `[' <ExprList> `]'
+          \alt <Id> (`.' <Id>)+
+\end{grammar}
+
+\paratitle{If} statements are as per usual. ``Braceless'' if statements are not permitted.
+\begin{grammar}
+    <IfStmt> ::= 
+    \keywordbf{if} `(' <IfExpr> `)'  `{' <Statement>* `}' \\ \keywordbf{else} `{' <Statement>* `}'
+    \alt \keywordbf{if} `(' <IfExpr> `)'  `{' <Statement>* `}'
+
+    <IfExpr> ::= <Expr> | *
+\end{grammar}
+
+\paratitle{Case} statements are as follows.
+\begin{grammar}
+    <CaseStmt> ::= \keywordbf{case} <CaseBlock>* \keywordbf{esac}
+
+    <CaseBlock> ::= <Expr> `:' `{' <Statement>* `}'
+                \alt \keywordbf{default} `:' `{' <Statement>* `}'
+\end{grammar}
+
+\paratitle{For loops} allow iteration over a statically defined range of values.
+\begin{grammar}
+    <ForLoop> ::= \keywordbf{for} <Id> \keywordbf{in} \keywordbf{range} `(' <Number> ',' <Number> `)' \\
+                  `{' <Statement>* `}'
+\end{grammar}
+
+\section{Expression Grammar}
+Let us turn to \paratitle{expressions}, which may be quantified. 
+\begin{grammar}
+    <Expr> ::= <E1>
+
+    <E1> ::= <E2>
+         \alt `(' \keywordbf{forall} `(' <IdTypeList> `)' `::' E1 `)'
+         \alt `(' \keywordbf{exists} `(' <IdTypeList> `)' `::' E1 `)'
+
+\end{grammar}
+
+The usual logical and bitwise operators are allowed.
+\begin{grammar}
+    <E2> ::= <E3> `<==>' <E2> | <E3>
+
+    <E3> ::= <E4> `==>' <E3> | <E4>
+
+    <E4> ::=  <E5> `&&' <E4> | <E5> `||' <E4> | 
+         \alt <E5> `&' <E4> | <E5> `|' <E4> | <E5> `^' <E4> 
+         \alt <E5>
+\end{grammar}
+
+As are relational operators, bitvector concatentation (++) and arithmetic.
+
+\begin{grammar}
+<E5> ::=  <E6> <RelOp> <E6> 
+
+<RelOp> ::= `>' | `<' | `=' | `!=' | `>=' | `<='
+
+<E6> ::=  <E7> `++' <E6> 
+
+<E7> ::=  <E8> `+' <E7>
+
+<E8> ::=  <E9> `-' <E9>
+
+<E9> ::= <E10> `*' <E10>
+\end{grammar}
+
+The unary operators are arithmetic negation (unary minus), logical negation and bitwise negation of bitvectors.
+\begin{grammar}
+    <E10> ::= <UnOp> <E11> | <E11>
+
+    <UnOp> ::= `-' | `!' | `~'
+\end{grammar}
+
+Array select, update and bitvector select operators are defined \`a la Boogie.
+\begin{grammar}
+    <E11> ::= <E12> `[' <Expr> (`,' <Expr>)* `]'
+          \alt <E12> `[' <Expr> (`,' <Expr>)* = <Expr> `]'
+          \alt <E12> `[' <Expr> `:' <Expr> `]'
+          \alt <E12>
+\end{grammar}
+
+Function invocation, record selection, and access to variables in instantiated modules is as follows.
+\begin{grammar}
+    <E12> ::=  <E13> `(' <ExprList> `)'
+          \alt <E13> (`.' <Id>)+
+          \alt <E13> (`->' <Id>)+
+\end{grammar}
+
+And finally, we have the terminal symbols, identifiers, tuples and the if-then-else operator.
+\begin{grammar}
+    <E12> ::= \keywordbf{false} | \keywordbf{true} | <Number>
+          \alt <Id> | <Id> `::' <Id>
+          \alt `{' <Expr> (`,' <Expr>)* `}'
+          \alt \keywordbf{ite} `(' <Expr> `,' <Expr> `,' <Expr> `)'
+\end{grammar}
+
+\section{Types}
+
+\begin{grammar}
+<Type> ::= <PrimitiveType> 
+       \alt <EnumType> 
+       \alt <TupleType> | <RecordType> 
+       \alt <ArrayType> 
+       \alt <SynonymType> 
+       \alt <ExternalType> 
+%%     }
+\end{grammar}
+
+Supported primitive types are Booleans, integers and bit-vectors. Bit-vector types are defined according the regular expression `bv[0-9]+' and the number following `bv' is the length of the bit-vector.
+
+\begin{grammar}
+    <PrimitiveType> ::= \keywordbf{bool} | \keywordbf{int} | <BitVectorType>
+\end{grammar}
+
+Enumerated types are defined using the \keywordbf{enum} keyword.
+\begin{grammar}
+    <EnumType> ::= \keywordbf{enum} `{' <IdList> `}'
+\end{grammar}
+
+Tuple types are declared using curly brace notation.
+\begin{grammar}
+    <TupleType> ::= `{' <Type>  (`,' <Type>)* `}'
+\end{grammar}
+
+Record types use the keyword \keywordbf{record}.
+\begin{grammar}
+    <Recordtype> ::= \keywordbf{record} `{' <IdTypeList> `}'
+\end{grammar}
+
+Array types are defined using square brackets. The list of types within square brackets defined the array's index type.
+\begin{grammar}
+    <ArrayType> ::= `[' <Type> (`,' <Type>)* `]' <Type>
+\end{grammar}
+
+Type synonyms are just identifiers, while external types refer to synonym types defined in a different module.
+\begin{grammar}
+    <SynonymType> ::= <Id>
+
+    <ExternalType> ::= <Id> `::' <Id>
+\end{grammar}
+
+\section{Control Block}
+\paratitle{The control block} consists of a list of commands. A command can have an optional result object, an optional argument object, an optional list of command parameters and finally an optional list of argument expressions. 
+\begin{grammar}
+     <ControlBlock> ::= \keywordbf{control}~~ `{' <Cmd>* `}'
+
+     <Cmd> ::= (<Id> `=' )? (<Id> `->')? <Id> \\
+              (`[' <IdList> `]')? <ExprList>? `;'
+
+\end{grammar}
+
+\section{Miscellaneous Nonterminals} 
+
+\nonterminal{IdList}, \nonterminal{IdTypeList} and \nonterminal{ExprList} are non-empty, comma-separated list of identifiers, identifier/type tuples and expressions respectively.
+\begin{grammar}
+     <IdList> ::= <Id> \alt <Id> `,' <IdList>
+
+     <IdTypeList> ::=  <Id> `:' <Type> 
+                  \alt <Id> `:' <Type> `,' <IdTypeList>
+
+     <ExprList> ::=  <Expr>
+                \alt <Expr> `,' <ExprList>
+\end{grammar}
+
