--- a/tutorial/ch-introduction.tex
+++ b/tutorial/ch-introduction.tex
@@ -132,7 +132,7 @@ Error : Unable to find main module.
 
 \subsection{Running \uclid{}}
 
-Invoke \uclid{} on a model is easy. Just run the \codelike{uclid} binary and provide the model as a command-line argument.
+Invoke \uclid{} on a model is easy. Just run the \codelike{uclid} binary and provide the model as a command-line argument. When invoked, \uclid{} looks for a module named \codelike{main} and executes the commands in its control block.\footnote{The \codelike{--main} command line argument can be used to specify a different name for the ``main'' module.} If no \codelike{main} module is found, \uclid{} will exit with an error, as we saw in the previous section when \codelike{uclid} was invoked without arguments.
 
 Example~\ref{ex:fib-model} is part of the \uclid{} distribution in the \codelike{examples/tutorial/} sub-directory. You can run \uclid{} on this model as:
 
